--- a/templates/teacher/scoring.html
+++ b/templates/teacher/scoring.html
@@ -110,10 +110,42 @@ swfobject.embedSWF("/static/sb2/Scratch.swf", "flashContent", "482", "387", "10.
               {% endif %}
               <tr><td colspan=2><input type="submit" value="Submit"></td></tr>
             </table>
-           {% csrf_token %}
+           {% csrf_token %}           
     {% else %}
         尚未繳交
-    {% endif %}       
+    {% endif %}    
+    {% elif lesson == "6" %}
+    <br>
+ {% if work.memo %}
+     <font color=black>心得感想：</font><BR>
+     {{work.memo}}
+     <br>           
+     <div>
+        作品檔案:
+    </div>
+    <div>
+       <a href="/student/work/download/{{work.typing}}/{{lesson}}/{{index}}/{{work.user_id}}/{{work.id}}">下載</a>
+    </div>
+    
+     <form action="" enctype="multipart/form-data"  method="post">
+         <table class="table" style="width:300px">
+             <tr><th><label for="id_score">分數:</label></th><td>{{form.score}}</td></tr>
+           {% if teacher %}
+<tr><td colspan=2><span>
+<textarea  name="comment" id="id_comment" class="form-control animated comment" cols="50" placeholder="請寫下評語(可留白)" rows="5">{% if work.comment %}{{work.comment}}{% endif %}</textarea>
+</span></td></tr> 	
+           
+<tr><td colspan=2><span class="button-checkbox">
+     <button type="button" class="btn" data-color="primary" style="width:100%">設為小老師</button>
+     <input type="checkbox" style="display: none;" name="assistant"/>
+ </span></td></tr>        
+           {% endif %}
+           <tr><td colspan=2><input type="submit" value="Submit"></td></tr>
+         </table>
+        {% csrf_token %}           
+ {% else %}
+     尚未繳交
+ {% endif %}        
           
   {% else %}
     <br>
