--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,8 @@ Licence URI: http://www.os-templates.com/template-terms
           </li>   
           <li><a href="#">Euler(Python)數學解題程式設計</a>
             <ul>
-              <li><A href="/student/lessons/C">南港高中特色課程：使用Python3</A></li>
+              <li><A href="/student/lessons/C">南港高中特色課程(1)：使用Python3</A></li>
+              <li><A href="https://hackmd.io/c/BkzOlQv-N/https%3A%2F%2Fhackmd.io%2Fs%2FBk2tbQPZN">南港高中特色課程(2)：使用Python3</A></li>              
             </ul>     
           </li> 
           <li><a href="#">Pandas(Python)數據分析程式設計</a>
