--- a/templates/base.html
+++ b/templates/base.html
@@ -104,15 +104,23 @@ Licence URI: http://www.os-templates.com/template-terms
 					 {% endif %}
  					{% if user.is_superuser %}
 			<li><a href="/account/admin"><img src="/static/images/icon_admin.png"> 管理</a></li>
-		      {% endif %}
-      {% else %}
+          {% endif %}
+          {% else %}                
       <li><A href="#"><img width=16 src="/static/images/icon_article.png"> 推薦</A>
         <ul>
+            <li><a href="#">人工智慧時代正式來臨</a>
+              <ul>
+                <li><a href="https://www.youtube.com/watch?v=kyJ_jPjnSJU" target="_blank">T觀點 20170226 (1/4)</a></li>			  
+                <li><a href="https://www.youtube.com/watch?v=-xoa78bz2kk" target="_blank">T觀點 20170226 (2/4)</a></li>			  
+                <li><a href="https://www.youtube.com/watch?v=bRlVROIioTM" target="_blank">T觀點 20170226 (3/4)</a></li>			  
+                <li><a href="https://www.youtube.com/watch?v=CDzHZrvbZj4" target="_blank">T觀點 20170226 (4/4)</a></li>			                                  
+              </ul>           
+            </li>          
           <li><a href="https://www.youtube.com/watch?v=4JhlfRAzVKY" target=_blank>怎麼樣成為一個高手</a></li>
           <li><a href="https://www.youtube.com/watch?v=s7wcbF8QiUQ" target=_blank>成功的要訣：恆毅力</a></li>
           <li><a href="https://www.youtube.com/watch?v=g9pgLqPzLBk" target=_blank>先別急著吃棉花糖</a></li>
           <li><a href="https://www.gvm.com.tw/article.html?id=33811" target=_blank>程式、跨領域、終身學習</a></li>
-			  </ul>
+        </ul>
     </li>
       <li><a href="http://www.books.com.tw/products/0010703424" target="_blank"><img src="/static/images/icon_book.png">參考書</a></li>
       <li><a href="/account/author"><img src="/static/images/icon_master.png">作者</a></li>
