--- a/templates/student/lessons.html
+++ b/templates/student/lessons.html
@@ -415,7 +415,7 @@ function MM_swapImage() { //v3.0
 <a href="/static/files/programming_vphysics.pdf" target=_blank role="button" class="btn btn-info">教材簡介</a>
 <a href="http://vphysics.ntu.edu.tw" target=_blank role="button" class="btn btn-info">更多VPhysics課程(主持人：臺灣大學物理學系石明豐教授)</a>
 <a href="http://www.glowscript.org/#/user/GlowScriptDemos/folder/Examples/" target=_blank role="button" class="btn btn-info">GlowScriptDemos</a>
-<a href="http://140.113.199.236:7788" target="_blank" role="button" class="btn btn-info">IoTtalk與3D互動式程式設計平台(主持人：交通大學資訊工程學系林一平講座教授)</a>
+<a href="http://edutalk4.nctu.edu.tw" target="_blank" role="button" class="btn btn-info">IoTtalk與3D互動式程式設計平台(主持人：交通大學資訊工程學系林一平講座教授)</a>
 
   <table style="border:0px; width:900px;">
   <tr>
