--- a/templates/show/gallerylist.html
+++ b/templates/show/gallerylist.html
@@ -6,16 +6,6 @@
 {% block content %}
 <table>
 
-      <script src="/static/libs/vendor.js"></script>
-      <script src="/static/libs/scratch-vm{{forloop.counter}}.min.js"></script>
-      <script src="/static/libs/scratch-storage.min.js"></script>
-      <script src="/static/libs/scratch-svg-renderer.js"></script>
-      <!-- note: this uses the BUILT version of scratch-render!  make sure to npm run build -->
-      <script src="/static/libs/scratch-render.min.js"></script>
-  <script>  
-      const audioEngine = new window.AudioEngine();
-      window.devicePixelRatio = 1;          
-  </script>
 {% for show in lists %}
 <tr><td>
     <h2>
@@ -24,121 +14,10 @@
       </a>
     </h2>
 {% if category == "1" %}  
-
-<style>
-    #test{{forloop.counter}} {width: 640px; height: 480px}
-  </style>
-    <img src="/static/images/greenflag.png" alt="Start" onclick="javascript: vm{{forloop.counter}}.greenFlag();" />
-    <canvas id="test{{forloop.counter}}"></canvas>
-  
-    <script>
-      // These variables are going to be available in the "window global" intentionally.
-      // Allows you easy access to debug with `vm.greenFlag()` etc.
-
-  
-      var canvas{{forloop.counter}} = document.getElementById('test{{forloop.counter}}');
-      var render{{forloop.counter}} = new ScratchRender(canvas{{forloop.counter}});
-      var vm{{forloop.counter}} = new VirtualMachine();
-      var storage{{forloop.counter}} = new ScratchStorage();
-      vm{{forloop.counter}}.attachAudioEngine(audioEngine);
-      vm{{forloop.counter}}.attachStorage(storage{{forloop.counter}});
-      vm{{forloop.counter}}.attachRenderer(render{{forloop.counter}});
-      vm{{forloop.counter}}.attachV2SVGAdapter(new ScratchSVGRenderer.SVGRenderer());
-      vm{{forloop.counter}}.attachV2BitmapAdapter(new ScratchSVGRenderer.BitmapAdapter());
-  
-      document.addEventListener('mousemove', e => {
-        const rect = canvas{{forloop.counter}}.getBoundingClientRect();
-        const coordinates = {
-          x: e.clientX - rect.left,
-          y: e.clientY - rect.top,
-          canvasWidth: rect.width,
-          canvasHeight: rect.height
-        };
-        vm{{forloop.counter}}.postIOData('mouse', coordinates);
-      });
-      canvas{{forloop.counter}}.addEventListener('mousedown', e => {
-        const rect = canvas{{forloop.counter}}.getBoundingClientRect();
-        const data = {
-          isDown: true,
-          x: e.clientX - rect.left,
-          y: e.clientY - rect.top,
-          canvasWidth: rect.width,
-          canvasHeight: rect.height
-        };
-        vm{{forloop.counter}}.postIOData('mouse', data);
-        e.preventDefault();
-      });
-      canvas{{forloop.counter}}.addEventListener('mouseup', e => {
-        const rect = canvas{{forloop.counter}}.getBoundingClientRect();
-        const data = {
-          isDown: false,
-          x: e.clientX - rect.left,
-          y: e.clientY - rect.top,
-          canvasWidth: rect.width,
-          canvasHeight: rect.height
-        };
-        vm{{forloop.counter}}.postIOData('mouse', data);
-        e.preventDefault();
-      });
-  
-      // Feed keyboard events as vm{{forloop.counter}} I/O events.
-      document.addEventListener('keydown', e => {
-        // Don't capture keys intended for Blockly inputs.
-        if (e.target !== document && e.target !== document.body) {
-          return;
-        }
-        vm{{forloop.counter}}.postIOData('keyboard', {
-          keyCode: e.keyCode,
-          isDown: true
-        });
-        e.preventDefault();
-      });
-      document.addEventListener('keyup', e => {
-        // Always capture up events,
-        // even those that have switched to other targets.
-        vm{{forloop.counter}}.postIOData('keyboard', {
-          keyCode: e.keyCode,
-          isDown: false
-        });
-        // E.g., prevent scroll.
-        if (e.target !== document && e.target !== document.body) {
-          e.preventDefault();
-        }
-      });
-  
-      function loadProject{{forloop.counter}}(project) {
-        const reader = new FileReader();
-        reader.onload = () => {
-          vm{{forloop.counter}}.start();
-          vm{{forloop.counter}}.loadProject(reader.result)
-            .then(() => {
-              // we add a `#loaded` div to our document, the integration suite
-              // waits for that element to show up to assume the vm{{forloop.counter}} is ready
-              // to play!
-              const div{{forloop.counter}} = document.createElement('div{{forloop.counter}}');
-              div{{forloop.counter}}.id = 'loaded';
-              document.body.appendChild(div{{forloop.counter}});
-              //vm{{forloop.counter}}.greenFlag();
-            });
-        };
-        if (!(project instanceof File)) {
-          const xhr = new XMLHttpRequest();
-          xhr.open('GET', project);
-          xhr.responseType = 'blob';
-          xhr.onload = function (e) {
-            reader.readAsArrayBuffer(e.target.response);
-          }
-          xhr.send();
-        } else {
-          reader.readAsArrayBuffer(project);
-        }
-      }
-  
-      window.onload = function (e) {
-        loadProject{{forloop.counter}}('/static/show/{{show.id}}/{{show.file}}');
-      }
-  
-    </script>
+<div class="scratch-work">
+  <img src="/static/images/greenflag.png" alt="Start" />
+  <canvas class="stage"></canvas>
+</div>
 {% else %}
 	{% if show.youtube %}
 	<iframe width="420" height="280" src="https://www.youtube.com/embed/{{show.youtube}}" frameborder="0" allowfullscreen></iframe>
@@ -156,5 +35,133 @@
 </td></tr>  
 </table>  
  {% include "pagination.html" with page=page_obj %}
-  
+{% if category == "1" %}
+<style>
+  .scratch-work>.stage {
+    width: 640px;
+    height: 480px
+  }
+
+</style>
+<script src="/static/libs/vendor.js"></script>
+<script src="/static/libs/scratch-vm.min.js"></script>
+<script src="/static/libs/scratch-svg-renderer.js"></script>
+<script>
+  // These variables are going to be available in the "window global" intentionally.
+  // Allows you easy access to debug with `vm.greenFlag()` etc.
+  window.devicePixelRatio = 1;
+
+  function loadProject(elem, project) {
+    // Init Scratch
+    var canvas = $('.stage', elem).get(0); //document.getElementById('test');
+    var render = new ScratchRender(canvas);
+    var vm = new VirtualMachine();
+    var storage = new ScratchStorage();
+    const audioEngine = new window.AudioEngine();
+    vm.attachAudioEngine(audioEngine);
+    vm.attachStorage(storage);
+    vm.attachRenderer(render);
+    vm.attachV2SVGAdapter(new ScratchSVGRenderer.SVGRenderer());
+    vm.attachV2BitmapAdapter(new ScratchSVGRenderer.BitmapAdapter());
+
+    document.addEventListener('mousemove', e => {
+      const rect = canvas.getBoundingClientRect();
+      const coordinates = {
+        x: e.clientX - rect.left,
+        y: e.clientY - rect.top,
+        canvasWidth: rect.width,
+        canvasHeight: rect.height
+      };
+      vm.postIOData('mouse', coordinates);
+    });
+    canvas.addEventListener('mousedown', e => {
+      const rect = canvas.getBoundingClientRect();
+      const data = {
+        isDown: true,
+        x: e.clientX - rect.left,
+        y: e.clientY - rect.top,
+        canvasWidth: rect.width,
+        canvasHeight: rect.height
+      };
+      vm.postIOData('mouse', data);
+      e.preventDefault();
+    });
+    canvas.addEventListener('mouseup', e => {
+      const rect = canvas.getBoundingClientRect();
+      const data = {
+        isDown: false,
+        x: e.clientX - rect.left,
+        y: e.clientY - rect.top,
+        canvasWidth: rect.width,
+        canvasHeight: rect.height
+      };
+      vm.postIOData('mouse', data);
+      e.preventDefault();
+    });
+
+    // Feed keyboard events as VM I/O events.
+    document.addEventListener('keydown', e => {
+      // Don't capture keys intended for Blockly inputs.
+      if (e.target !== document && e.target !== document.body) {
+        return;
+      }
+      vm.postIOData('keyboard', {
+        keyCode: e.keyCode,
+        isDown: true
+      });
+      e.preventDefault();
+    });
+    document.addEventListener('keyup', e => {
+      // Always capture up events,
+      // even those that have switched to other targets.
+      vm.postIOData('keyboard', {
+        keyCode: e.keyCode,
+        isDown: false
+      });
+      // E.g., prevent scroll.
+      if (e.target !== document && e.target !== document.body) {
+        e.preventDefault();
+      }
+    });
+
+    const reader = new FileReader();
+    reader.onload = () => {
+      vm.start();
+      vm.loadProject(reader.result)
+        .then(() => {
+          // we add a `#loaded` div to our document, the integration suite
+          // waits for that element to show up to assume the vm is ready
+          // to play!
+          const div = document.createElement('div');
+          div.id = 'loaded';
+          document.body.appendChild(div);
+          //vm.greenFlag();
+        });
+    };
+    if (!(project instanceof File)) {
+      const xhr = new XMLHttpRequest();
+      xhr.open('GET', project);
+      xhr.responseType = 'blob';
+      xhr.onload = function (e) {
+        reader.readAsArrayBuffer(e.target.response);
+      }
+      xhr.send();
+    } else {
+      reader.readAsArrayBuffer(project);
+    }
+    $('img[alt="Start"]', elem).click(function (e) {
+      console.log(e);
+      vm.greenFlag();
+    });
+  }
+
+  $(document).ready(function () {
+    var works = $('.scratch-work');
+    {% for show in lists %}
+    loadProject(works[{{forloop.counter|add:-1}}], '/static/show/{{show.id}}/{{show.file}}');
+    {% endfor %}
+  });
+
+</script>
+{% endif %}
 {% endblock %}
