--- a/templates/show/showgroup_form.html
+++ b/templates/show/showgroup_form.html
@@ -72,7 +72,7 @@ function checkvalue() {
         var val = $(this).val().toLowerCase(),
             regex2 = new RegExp("(.*?)\.(sb2)$");
             regex3 = new RegExp("(.*?)\.(sb3)$");            
-        if (!(regex2.test(val)) or !(regex3.test(val))) {
+        if (!(regex2.test(val)) &&  !(regex3.test(val))) {
             $(this).val('');
             alert('您的檔案格式錯誤，只能上傳Scratch作品(.sb2或.sb3)');
         }
