--- a/templates/student/submitA.html
+++ b/templates/student/submitA.html
@@ -14,12 +14,13 @@ $(function () {
         var val = $(this).val().toLowerCase(),
             regex2 = new RegExp("(.*?)\.(sb2)$");
             regex3 = new RegExp("(.*?)\.(sb3)$");
-        if (!(regex2.test(val)) or !(regex3.test(val))) {
+        if (!(regex2.test(val)) && !(regex3.test(val))) {
             $(this).val('');
             alert('您的檔案格式錯誤，只能上傳Scratch作品(.sb2或.sb3)');
         }
     });
 });  
+
 </script>
             <form action="/student/work/submit/{% if typing == "0" %}0{% else %}1{% endif %}/{% if 'A' in lesson %}1{% else %}{{lesson}}{% endif %}/{{index}}/" method="post" enctype="multipart/form-data" onsubmit="return checkvalue(this, {{index}});">      
               <input type="hidden" name="lesson" value={{lesson}}>             
@@ -43,131 +44,6 @@ $(function () {
               </table>
       {% csrf_token %}   
             </form>
-
-{% if work_dict|hash_memo:index %}
-<style>
-    #test {width: 640px; height: 480px}
-  </style>
-  <script src="/static/libs/vendor.js"></script>
-  <script src="/static/libs/scratch-vm.min.js"></script>
-  <script src="/static/libs/scratch-storage.min.js"></script>
-  <script src="/static/libs/scratch-svg-renderer.js"></script>
-  <!-- note: this uses the BUILT version of scratch-render!  make sure to npm run build -->
-  <script src="/static/libs/scratch-render.min.js"></script>
-
-  <img src="/static/images/greenflag.png" alt="Start" onclick="javascript: vm.greenFlag();" />
-  <canvas id="test"></canvas>
-
-  <script>
-    // These variables are going to be available in the "window global" intentionally.
-    // Allows you easy access to debug with `vm.greenFlag()` etc.
-    window.devicePixelRatio = 1;
-
-    var canvas = document.getElementById('test');
-    var render = new ScratchRender(canvas);
-    var vm = new VirtualMachine();
-    var storage = new ScratchStorage();
-    const audioEngine = new window.AudioEngine();
-    vm.attachAudioEngine(audioEngine);
-    vm.attachStorage(storage);
-    vm.attachRenderer(render);
-    vm.attachV2SVGAdapter(new ScratchSVGRenderer.SVGRenderer());
-    vm.attachV2BitmapAdapter(new ScratchSVGRenderer.BitmapAdapter());
-
-    document.addEventListener('mousemove', e => {
-      const rect = canvas.getBoundingClientRect();
-      const coordinates = {
-        x: e.clientX - rect.left,
-        y: e.clientY - rect.top,
-        canvasWidth: rect.width,
-        canvasHeight: rect.height
-      };
-      vm.postIOData('mouse', coordinates);
-    });
-    canvas.addEventListener('mousedown', e => {
-      const rect = canvas.getBoundingClientRect();
-      const data = {
-        isDown: true,
-        x: e.clientX - rect.left,
-        y: e.clientY - rect.top,
-        canvasWidth: rect.width,
-        canvasHeight: rect.height
-      };
-      vm.postIOData('mouse', data);
-      e.preventDefault();
-    });
-    canvas.addEventListener('mouseup', e => {
-      const rect = canvas.getBoundingClientRect();
-      const data = {
-        isDown: false,
-        x: e.clientX - rect.left,
-        y: e.clientY - rect.top,
-        canvasWidth: rect.width,
-        canvasHeight: rect.height
-      };
-      vm.postIOData('mouse', data);
-      e.preventDefault();
-    });
-
-    // Feed keyboard events as VM I/O events.
-    document.addEventListener('keydown', e => {
-      // Don't capture keys intended for Blockly inputs.
-      if (e.target !== document && e.target !== document.body) {
-        return;
-      }
-      vm.postIOData('keyboard', {
-        keyCode: e.keyCode,
-        isDown: true
-      });
-      e.preventDefault();
-    });
-    document.addEventListener('keyup', e => {
-      // Always capture up events,
-      // even those that have switched to other targets.
-      vm.postIOData('keyboard', {
-        keyCode: e.keyCode,
-        isDown: false
-      });
-      // E.g., prevent scroll.
-      if (e.target !== document && e.target !== document.body) {
-        e.preventDefault();
-      }
-    });
-
-    function loadProject(project) {
-      const reader = new FileReader();
-      reader.onload = () => {
-        vm.start();
-        vm.loadProject(reader.result)
-          .then(() => {
-            // we add a `#loaded` div to our document, the integration suite
-            // waits for that element to show up to assume the vm is ready
-            // to play!
-            const div = document.createElement('div');
-            div.id = 'loaded';
-            document.body.appendChild(div);
-            //vm.greenFlag();
-          });
-      };
-      if (!(project instanceof File)) {
-        const xhr = new XMLHttpRequest();
-        xhr.open('GET', project);
-        xhr.responseType = 'blob';
-        xhr.onload = function (e) {
-          reader.readAsArrayBuffer(e.target.response);
-        }
-        xhr.send();
-      } else {
-        reader.readAsArrayBuffer(project);
-      }
-    }
-
-    window.onload = function (e) {
-      loadProject('/static/work/scratch/{{request.user.id}}/{{work_dict|hash_file:index}}');
-    }
-
-  </script>
-{% endif %}
         {% with workfiles=work_dict|hash_files:index %}
 
         {% for workfile in workfiles %}		
