--- a/templates/show/showreview_review.html
+++ b/templates/show/showreview_review.html
@@ -31,10 +31,11 @@ $("#id_score").rating({min:1, max:5, step:1, size:'lg'});
             {% endif %}
   <h1>組別：{{show.name}}</h1>
   <h1>組員：{% for member in members %}<A href="/account/profile/{{member.student.id}}"><img src="/static/avatar/s{{ member.student.profile.avatar }}.png"></a>({{member.seat}}){{member.student.first_name}}{% endfor %}</h1>
-  <h1>{{ show.title }}</h1>
-{% if show.site %}
+  <h1>名稱：{{ show.title }}</h1>
+  <h1>說明：</h1>{{ show.body }}<BR>
+  {% if show.site %}
       <iframe allowtransparency="true" width="485" height="402" src="{{ show.site|scratch }}" frameborder=“0” allowfullscreen></iframe>
-{% endif %}
+{% else %}
 {% if show.file %}
 <style>
   #test {width: 640px; height: 480px}
@@ -163,6 +164,7 @@ $("#id_score").rating({min:1, max:5, step:1, size:'lg'});
         {% endfor %}
 <BR><BR>
   {% endif %}
+{% endif %}
 	{% if show.youtube %}
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/{{show.youtube}}" frameborder="0" allowfullscreen></iframe>
 	{% endif %}
