--- a/templates/show/showreview_review.html
+++ b/templates/show/showreview_review.html
@@ -32,7 +32,7 @@ $("#id_score").rating({min:1, max:5, step:1, size:'lg'});
   <h1>組別：{{show.name}}</h1>
   <h1>組員：{% for member in members %}<A href="/account/profile/{{member.student.id}}"><img src="/static/avatar/s{{ member.student.profile.avatar }}.png"></a>({{member.seat}}){{member.student.first_name}}{% endfor %}</h1>
   <h1>名稱：{{ show.title }}</h1>
-  <h1>說明：</h1>{{ show.body }}<BR>
+  <h1>說明：{{ show.body }}</h1>
   {% if show.site %}
       <iframe allowtransparency="true" width="485" height="402" src="{{ show.site|scratch }}" frameborder=“0” allowfullscreen></iframe>
 {% else %}
