--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,7 @@ Licence URI: http://www.os-templates.com/template-terms
               <li><a href="/student/lessons/B">南港高中通識課程：使用Python2</a></li>            
               <li><a href="/student/lessons/E">南港高中通識課程：使用Python3</a></li>                 
               <li><a href="/student/lessons/D">建國中學特色課程：使用Python3</a></li>
+              <li><a href="https://hackmd.io/c/ry0o42UMV/https%3A%2F%2Fhackmd.io%2FEfmWool4RyuA86s4b9npsQ" target=_blank>EduTalk虛實整合：使用Python3</a></li>			  
             </ul>  
           </li>          
           <li><a href="#">Django(Python)網站開發程式設計</a>
